--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-POSTGRES_DATABASE=verceldb
-POSTGRES_HOST=ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech
-POSTGRES_PASSWORD=5CFlXRuN0awz
-POSTGRES_USER=default
-POSTGRES_PRISMA_URL=postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require
-POSTGRES_URL_NO_SSL=postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech/verceldb
-POSTGRES_URL_NON_POOLING=postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require
-POSTGRES_URL=postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require
+POSTGRES_URL="postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:5CFlXRuN0awz@ep-steep-fire-a1vnqp6m.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-steep-fire-a1vnqp6m-pooler.ap-southeast-1.aws.neon.tech"
+POSTGRES_PASSWORD="5CFlXRuN0awz"
+POSTGRES_DATABASE="verceldb"
